tests/machine/x/scala/group_by_join.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_by_join.scala:11: error: value size is not a member of group_by_join._Group[String,group_by_join.Stat]
  val stats = ((for { o <- orders; c <- customers; if o.customerId == (c.id).asInstanceOf[Int] } yield (c.name, Stat(o = o, c = c))).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).map{ g => Stat1(name = g.key, count = (g).size) }.toList
                                                                                                                                                                                                                                                      ^
/workspace/mochi/tests/machine/x/scala/group_by_join.scala:15: error: value name is not a member of Nothing
      println((s.name) + " " + ("orders:") + " " + (s.count))
                 ^
/workspace/mochi/tests/machine/x/scala/group_by_join.scala:15: error: value count is not a member of Nothing
      println((s.name) + " " + ("orders:") + " " + (s.count))
                                                      ^
three errors found
